--- a/style/style.css
+++ b/style/style.css
@@ -46,11 +46,21 @@ body {
 
     background: linear-gradient(96deg, #ac6115 0%, #9e7a19 100%);
 }
-.main{
+
+.common-title {
+    text-align: center;
+    font-size: 64px;
+    line-height: 80px;
+    letter-spacing: 1.92px;
+    text-transform: uppercase;
+}
+
+.main {
     background-image: url(../assets/images/main_bg.png);
     background-position: top center;
     overflow: hidden;
 }
+
 .site-header {
     padding: 40px 0;
 }
@@ -105,8 +115,9 @@ body {
 .main-content {
     padding: 103px 0 199px;
 }
-.main-content .container{
-   position: relative;
+
+.main-content .container {
+    position: relative;
 }
 
 .main-info {
@@ -135,8 +146,184 @@ body {
     line-height: 29px;
     padding: 56px 0;
 }
-.main-image{
+
+.main-image {
     position: absolute;
     top: -123px;
     left: calc(100% - 991px);
+}
+
+.why {
+    background-image: url(../assets/images/main_bg.png);
+    background-position: top center;
+    background-size: initial;
+    padding-bottom: 180px;
+}
+
+
+
+.why-items {
+    margin-top: 60px;
+    display: grid;
+    gap: 100px;
+    grid-template-columns: repeat(3, 312px);
+    justify-content: center;
+}
+
+.why-item {
+    text-align: center;
+}
+
+.why-item-title {
+    font-size: 24px;
+    line-height: 29px;
+    padding: 24px 0;
+}
+
+.why-item-text {
+    font-size: 16px;
+    line-height: 140%;
+}
+
+.products {
+    background-image: url(../assets/images/burgers_bg.png);
+    background-position: top center;
+    background-size: 1400px;
+    padding-bottom: 180px;
+}
+
+.products-items {
+    display: grid;
+    grid-template-columns: repeat(3, 384px);
+    gap: 24px;
+    margin-top: 60px;
+}
+
+.products-item {
+    padding: 30px;
+    background-color: #211A16;
+    border: 1px solid #353535;
+    border-radius: 16px;
+}
+
+.products-item-image {
+    height: 250px;
+}
+
+.products-item-image img {
+    max-width: 100%;
+}
+
+.products-item-title {
+    margin: 24px 0;
+    font-size: 24px;
+    line-height: 29px;
+}
+
+.products-item-text {
+    margin-bottom: 24px;
+    font-size: 16px;
+    line-height: 140%;
+}
+
+.products-item-extra {
+    display: flex;
+    justify-content: space-between;
+}
+
+.products-item-price {
+    font-size: 32px;
+    margin-bottom: 8px;
+    line-height: 39px;
+}
+
+.products-item-weight {
+    color: #757575;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 18px;
+}
+
+.btn-products {
+    display: flex;
+    width: 182px;
+    height: 62px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.order {
+    background-image: url(../assets/images/order_bg.png);
+    background-position: top center;
+    background-repeat: no-repeat;
+    padding-bottom: 180px;
+    overflow: hidden;
+}
+
+.order .container {
+    position: relative;
+}
+
+.order-image {
+    position: absolute;
+    top: 0;
+    right: calc(100% - 764px);
+}
+
+.order-form {
+    border-radius: 16px;
+    border: 1px solid #353535;
+    background: #211A16;
+    margin-top: 60px;
+    width: 426px;
+    padding: 60px 40px;
+    box-sizing: border-box;
+    margin-left: 674px;
+}
+.order-form-text{
+    font-size: 24px;
+    line-height: 29px;
+    text-align: center;
+}
+.order-form-inputs{
+    display: flex;
+    flex-direction: column;
+    margin-top: 40px;
+}
+.order-form-input{
+    width: 344px;
+    height: 62px;
+    border-radius: 8px;
+    background: linear-gradient(96deg, #DA8023 0%, #E2B438 100%);
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.order-form-input input{
+    padding: 16px 10px;
+    background:  #211A16;
+    border-radius: 8px;
+    color: #fff;
+    width: 342px;
+    height: 60px;
+    box-sizing: border-box;
+    outline: none;
+    border: 1px solid transparent;
+}
+.order-form-inputs .btn{
+    width: 344px;
+height: 62px;
+}
+.site-footer{
+    padding: 60px 0;
+}
+.site-footer .container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.rights{
+    font-size: 16px;
 }
